--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ table {
 th, td {
   text-align: center;
   padding: 2px;
+  border-right: 1px solid grey;
+  border-left: 1px solid grey;
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
 }
 
 td {
