--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 table {
   border-collapse: collapse;
+  width: 100%;
 }
 
 th, td {
@@ -12,7 +13,8 @@ th, td {
 }
 
 td {
-  line-height: 100%;
+  height: 110%;
+  width: 1%;
 }
 
 table tbody tr:nth-child(even) {
