--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@ table {
 th, td {
   text-align: center;
   padding: 1px;
-  border-right: solid #d8d8d8;
-  border-left: solid #d8d8d8;
-  border-top: solid #d8d8d8;
-  border-bottom: solid #d8d8d8;
+  border-right: 1px solid #d8d8d8;
+  border-left: 1px solid #d8d8d8;
+  border-top: 1px solid #d8d8d8;
+  border-bottom: 1px solid #d8d8d8;
 }
 
 td {
